revert travis config file while the X dependency is not sorted.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: cpp
-script: "qmake projects/mtg/wagic-qt.pro CONFIG+=testsuite CONFIG+=debug && make -j 8 && ./wagic testsuite"
+script: "qmake projects/mtg/wagic-qt.pro CONFIG+=testsuite CONFIG+=debug && make -j 8"
