--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,30 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+
+#for XCode and MacOS
+## Mac OS X
+*.DS_Store
+
+# Xcode
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
+
+# Generated files
+*.o
+*.pyc
+
+
+#Python modules
+MANIFEST
+dist/
+build/
+
+# Backup files
+*~.nib
