--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_install:
   - export PATH="$PATH:$PSPDEV/bin:$PSPSDK/bin"
 install:
   - wget -O sdk.lzma http://sourceforge.net/projects/minpspw/files/SDK%20%2B%20devpak/pspsdk%200.11.2/minpspw_0.11.2-amd64.tar.lzma/download
-  - tar -x --xz -f sdk.lzma6
+  - tar -x --xz -f sdk.lzma
 script: "./travis-script.sh"
