Added WRL frontend for Win8 and WP8 Merged Qt, SDL and WRL frontend on the same corewrapper Moved OpenGL code out of SDL and Qt frontends to OpenGl backend (JGfx.cpp) Updated file system and network code to be compatible with WRL

--- a/JGE/JGE.vcxproj
+++ b/JGE/JGE.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Dependencies\SDL\src\main\windows\SDL_windows_main.c" />
+    <ClCompile Include="src\corewrapper.cpp" />
     <ClCompile Include="src\Encoding.cpp" />
     <ClCompile Include="src\JAnimator.cpp" />
     <ClCompile Include="src\JApp.cpp">
@@ -298,6 +299,7 @@
     <ClCompile Include="src\zipFS\zstream.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\corewrapper.h" />
     <ClInclude Include="include\DebugRoutines.h" />
     <ClInclude Include="include\decoder_prx.h" />
     <ClInclude Include="include\Encoding.h" />
