--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ before_install:
   - export PSPDEV="$TRAVIS_BUILD_DIR/opt/pspsdk"
   - export PSPSDK="$PSPDEV/psp/sdk"
   - export PATH="$PATH:$PSPDEV/bin:$PSPSDK/bin"
+  - export ANDROID="android-sdk-linux/tools/android"
 install:
   - wget -O sdk.lzma http://sourceforge.net/projects/minpspw/files/SDK%20%2B%20devpak/pspsdk%200.11.2/minpspw_0.11.2-amd64.tar.lzma/download
   - tar -x --xz -f sdk.lzma
+  - wget http://dl.google.com/android/ndk/android-ndk-r9-linux-x86_64.tar.bz2 -nv
+  - wget http://dl.google.com/android/android-sdk_r22-linux.tgz -nv
+  - tar --absolute-names -jxf android-ndk-r9-linux-x86_64.tar.bz2
+  - tar -zxf android-sdk_r22-linux.tgz
+  - $ANDROID update sdk --filter 1,2,3,8 --no-ui --force > log.txt
 script: "./travis-script.sh"
